--- a/bike/src/latex/class_bicicleta.tex
+++ b/bike/src/latex/class_bicicleta.tex
@@ -75,6 +75,9 @@
 \item 
 \hypertarget{class_bicicleta_ae48de57881e09ac89a84558c79894640}{void {\bfseries set\+Empresa} (string emp)}\label{class_bicicleta_ae48de57881e09ac89a84558c79894640}
 
+\item 
+\hypertarget{class_bicicleta_a0f6d8c8efea7822160a397ef040438d1}{\hyperlink{class_registo}{Registo} $\ast$ {\bfseries ultimo\+\_\+reg} () const }\label{class_bicicleta_a0f6d8c8efea7822160a397ef040438d1}
+
 \end{DoxyCompactItemize}
 
 
