--- a/bike/src/latex/annotated.tex
+++ b/bike/src/latex/annotated.tex
@@ -4,7 +4,7 @@ Here are the classes, structs, unions and interfaces with brief descriptions\+:\
 \item\contentsline{section}{\hyperlink{class_data}{Data} }{\pageref{class_data}}{}
 \item\contentsline{section}{\hyperlink{class_empresa}{Empresa} }{\pageref{class_empresa}}{}
 \item\contentsline{section}{\hyperlink{class_posto_servico}{Posto\+Servico} }{\pageref{class_posto_servico}}{}
-\item\contentsline{section}{\hyperlink{class_rede}{Rede} }{\pageref{class_rede}}{}
+\item\contentsline{section}{\hyperlink{class_rede}{Rede} \\*\hyperlink{class_rede}{Rede} -\/ main program class }{\pageref{class_rede}}{}
 \item\contentsline{section}{\hyperlink{class_registo}{Registo} }{\pageref{class_registo}}{}
 \item\contentsline{section}{\hyperlink{class_ut__ocasional}{Ut\+\_\+ocasional} }{\pageref{class_ut__ocasional}}{}
 \item\contentsline{section}{\hyperlink{class_utilizador}{Utilizador} }{\pageref{class_utilizador}}{}
